@@ -87,9 +87,48 @@ SupportsNonPowerOfTwoTexturesGLES()
 
 gcc_pure
 static bool
+IsVendor(const char *_vendor)
+{
+  const char *vendor = (const char *)glGetString(GL_VENDOR);
+  return vendor != nullptr && strcmp(vendor, _vendor) == 0;
+}
+
+gcc_pure
+static bool
+IsRenderer(const char *_renderer)
+{
+  const char *renderer = (const char *)glGetString(GL_RENDERER);
+  return renderer != nullptr && strcmp(renderer, _renderer) == 0;
+}
+
+gcc_pure
+static bool
+IsVivanteGC800()
+{
+  /* note: this is a Vivante GPU, but its driver declares Marvell as
+     its vendor (found on Samsung GT-S5690) */
+  return IsVendor("Marvell Technology Group Ltd") &&
+    IsRenderer("GC800 Graphics Engine");
+}
+
+gcc_pure
+static bool
+IsVivanteGC1000()
+{
+  return IsVendor("Vivante Corporation") &&
+    IsRenderer("GC1000 Graphics Engine");
+}
+
+gcc_pure
+static bool
 CheckOESDrawTexture()
 {
-  return OpenGL::IsExtensionSupported("GL_OES_draw_texture");
+  return OpenGL::IsExtensionSupported("GL_OES_draw_texture") &&
+    /* workaround: disable OES_draw_texture on certain Vivante GPUs
+       because they are known to be buggy: when combined with
+       GL_COLOR_LOGIC_OP, the left quarter of the texture is not
+       drawn */
+    !IsVivanteGC800() && !IsVivanteGC1000();
 }
 
 #endif
